Fix package gallery stretching

--- a/app/scss/gallery.scss
+++ b/app/scss/gallery.scss
@@ -48,7 +48,7 @@
 	img {
 		width: 100px;
 		height: 67px;
-		object-fit: contain;
+		object-fit: cover;
 	}
 }
 
